# AnBan

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  environment.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  real-readiness.yml
anban/: __init__.py  application.py  cli.py  cli_schedule.py  workspace.py
anban/capability/: __init__.py  contracts.py  delegate.py  http.py  inventory.py  local.py  mcp.py  memory.py  process.py  process_background.py  process_worker.py  registry.py  schema.py  skill.py  workspace.py
anban/config/: __init__.py  loader.py  mcp.py  policy.py  webhook.py
anban/core/: __init__.py  context.py  errors.py  graph.py  ids.py  inbox.py  lifecycle.py  metadata.py  models.py  persistence.py  schedule.py
anban/interaction/: __init__.py  contracts.py  inbox.py  scheduler.py  service.py  webhook.py
anban/model/: __init__.py  adapter.py  config.py  contracts.py  response.py
anban/persistence/: __init__.py  config.py  inbox_mapper.py  mappers.py  models.py  repository.py  repository_errors.py  schedule_mapper.py  unit_of_work.py
anban/runtime/: __init__.py  agent.py  agent_decisions.py  agent_event_facts.py  agent_execution.py  agent_prompts.py  capability_persistence.py  checkpoint_persistence.py  completion.py  continuation.py  contracts.py  failure_outcomes.py  graph_builder.py  graph_execution.py  graph_result_reuse.py  graph_routing.py  graph_task_runtime.py  initialization_events.py  inspection.py  interaction_update_persistence.py  interaction_updates.py  model_persistence.py  observability.py  persistence.py  persistence_errors.py  persistence_events.py  persistence_metadata.py  recovery.py  recovery_agent.py  recovery_persistence.py  result_reconstruction.py  (+4 more)
docs/: cli.md
migrations/: env.py
scripts/: __init__.py  bootstrap_ci_workspace.py  check_real_model.py  doctor.py  readiness.py  run_pyright.py  workspace_bootstrap.py
tests/: test_architecture_boundaries.py  test_cli.py  test_doctor.py  test_package_boundaries.py  test_readiness_helpers.py  test_release_surface.py  test_workspace_init.py
(+141 files in other folders)
