[project]
name = "anban"
version = "0.0.0"
description = "Development-ready foundation for Anban"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.15",
  "asyncpg>=0.30",
  "fastapi>=0.115",
  "httpx[socks]>=0.28",
  "langgraph>=0.4",
  "openai>=1.75",
  "pydantic>=2.11",
  "python-dotenv>=1.1",
  "sqlalchemy[asyncio]>=2.0",
]

[dependency-groups]
dev = [
  "pyright>=1.1.400",
  "pytest>=8.3",
  "pytest-asyncio>=0.26",
  "ruff>=0.11",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
stubPath = "typings"
include = ["anban", "scripts", "tests"]
exclude = ["node_modules"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
